# idle-colony-game

./: Cargo.toml  Readme.md  guide.md  idle_colony_game-73bdf624cd4456ff.js  idle_colony_game-8ddd6ceff4e269fb.js  idle_colony_game-bad6c767ffcb5555.js  idle_colony_game-c84bff9cd9d7395a.js  index.html
.github/: semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  implementation_ticket.md
.github/workflows/: deploy-page.yml  rust.yml
assets/maps/: map1.txt
src/: game_camera.rs  lib.rs  main.rs  map.rs  player.rs  track.rs  tracks.rs
