[package]
name = "idle_colony_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_ecs_tilemap = "0.10.0"
wasm = "0.0.0"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]